--- a/src/plugins/core/loupedeckct/prefs/html/panel.html
+++ b/src/plugins/core/loupedeckct/prefs/html/panel.html
@@ -1340,7 +1340,7 @@
 								<a href="#" class="button loupedeckActionButton" onclick="iconHistory()">History</a> <a href="#" class="button loupedeckActionButton" onclick="clearIcon()">{{ i18n("clear") }}</a>
 							</th>
 						</tr>
-						<tr>
+						<tr style="padding-top: 10px;">
 							<th>
 								<a href="#" class="bottomButton" onclick="copyControlToAllBanks()">Copy Control to All Banks</a>
 							</th>
