Improve Loupedeck Import/Export options to allow for individual applications and banks
- Fixed formatting bug in Loupedeck CT store settings on flash warning.
- Loupedeck CT & Stream Deck Preferences windows now default to “All
Applications” on fresh install.
- Closes #2295

--- a/src/plugins/core/loupedeckct/prefs/html/panel.html
+++ b/src/plugins/core/loupedeckct/prefs/html/panel.html
@@ -612,6 +612,8 @@
 				id: "loupedeckCTPanelCallback",
 				params: {
 					type: "importSettings",
+					application: document.getElementById("application").value,
+					bank: document.getElementById("bank").value,
 				},
 			}
 			postMessage(result);
@@ -626,6 +628,8 @@
 				id: "loupedeckCTPanelCallback",
 				params: {
 					type: "exportSettings",
+					application: document.getElementById("application").value,
+					bank: document.getElementById("bank").value,
 				},
 			}
 			postMessage(result);
@@ -1193,8 +1197,8 @@
 					<table class="loupedeck" style="height: 526px;" id="noLoupedeck">
 						<tr>
 							<th>
-								<p style="font-size: 12px; font-weight: normal;">{{ i18n("loupedeckCTStoreSettingsOnFlashDriveLineOne") }}</p>
-								<p style="font-size: 12px; font-weight: normal;">{{ i18n("loupedeckCTStoreSettingsOnFlashDriveLineTwo") }}</p>
+								<p style="font-size: 12px; font-weight: normal;">{* i18n("loupedeckCTStoreSettingsOnFlashDriveLineOne") *}</p>
+								<p style="font-size: 12px; font-weight: normal;">{* i18n("loupedeckCTStoreSettingsOnFlashDriveLineTwo") *}</p>
 							</th>
 						</tr>
 					</table>
