--- a/src/plugins/finalcutpro/toolbox/fcpxmltitles/html/panel.html
+++ b/src/plugins/finalcutpro/toolbox/fcpxmltitles/html/panel.html
@@ -111,9 +111,9 @@
 		}
 	}
 </script>
-<h3 class="uiItem">FCPXML Titles Processor</h3>
-<p class="uiItem">This utility allows you update the titles within a FCPXML, based on new data from a CSV file.</p>
-<p class="uiItem">You can also Batch Process an entire folder. To do this, the FCPXML and CSV filenames need to be identical.</p>
+<h3 class="uiItem">{{ i18n("fcpxmlTitlesProcessor") }}</h3>
+<p class="uiItem">{{ i18n("fcpxmlTitlesProcessorDescriptionLineOne") }}</p>
+<p class="uiItem">{{ i18n("fcpxmlTitlesProcessorDescriptionLineTwo") }}</p>
 <table>
 	<tr>
 		<th style="height: 10px;"></th>
@@ -121,10 +121,13 @@
 	<tr>
 		<th style="width: 10px;"></th>
 		<th>
-			<a href="#" class="bottomButton" onclick="pressButton('loadFCPXMLTemplate')">Load FCPXML Template</a>
+			<a href="#" class="bottomButton" onclick="pressButton('loadFCPXMLTemplate')">{{ i18n("loadFCPXMLTemplate") }}</a>
 		</th>
 		<th>
-			<a href="#" class="bottomButton" onclick="pressButton('loadCSVData')">Load CSV Data</a>
+			<a href="#" class="bottomButton" onclick="pressButton('loadCSVData')">{{ i18n("loadCSVData") }}</a>
+		</th>
+		<th>
+			<a href="#" class="bottomButton" onclick="pressButton('reset')">{{ i18n("reset") }}</a>
 		</th>
 	</tr>
 </table>
@@ -132,24 +135,24 @@
 <table style="margin-left:13px;">
 	<tr>
 		<th>
-			<h3 style="width: 200px; text-align:left; margin-bottom:2px;">Processing Options</h3>
+			<h3 style="width: 200px; text-align:left; margin-bottom:2px;">{{ i18n("processingOptions") }}</h3>
 		</th>
 		<th></th>
 		<th style="width: 100px;"></th>
 		<th>
-			<h3 style="width: 200px; text-align:left; margin-bottom:2px;">CSV Options</h3>
+			<h3 style="width: 200px; text-align:left; margin-bottom:2px;">{{ i18n("csvOptions") }}</h3>
 		</th>
 	</tr>
 	<tr>
 		<th style="width: 200px; text-align:left;">
-			<span style="font-weight:normal; font-size:13px;">Trim whitespace:</span>
+			<span style="font-weight:normal; font-size:13px;">{{ i18n("trimWhitespace") }}:</span>
 		</th>
 		<th>
 			<input type="checkbox" id="trimWhiteSpace" onchange="changeChecked(this)">
 		</th>
 		<th style="width: 100px;"></th>
 		<th style="text-align: left;">
-			<span style="font-weight:normal; font-size:13px;">Ignore first row:</span>
+			<span style="font-weight:normal; font-size:13px;">{{ i18n("ignoreFirstRow") }}:</span>
 		</th>
 		<th style="text-align: left;">
 			<input type="checkbox" id="ignoreFirstRow" onchange="changeChecked(this)">
@@ -157,14 +160,14 @@
 	</tr>
 	<tr>
 		<th style="width: 200px; text-align:left;">
-			<span style="font-weight:normal; font-size:13px;">Remove line breaks:</span>
+			<span style="font-weight:normal; font-size:13px;">{{ i18n("removeLineBreaks") }}:</span>
 		</th>
 		<th>
 			<input type="checkbox" id="removeLineBreaks" onchange="changeChecked(this)">
 		</th>
 		<th style="width: 100px;"></th>
 		<th style="width: 200px; text-align:left;">
-			<span style="font-weight:normal; font-size:13px;">Column containing original title:</span>
+			<span style="font-weight:normal; font-size:13px;">{{ i18n("columnContainingOriginalTitle") }}:</span>
 		</th>
 		<th>
 			<select id="originalTitleColumn" style="width: 35px;" onchange="changeValue(this)">
@@ -178,14 +181,14 @@
 	</tr>
 	<tr>
 		<th style="width: 200px; text-align:left; height:27px;">
-			<span style="font-weight:normal; font-size:13px;">Send to Final Cut Pro:</span>
+			<span style="font-weight:normal; font-size:13px;">{{ i18n("sendToFinalCutPro") }}:</span>
 		</th>
 		<th>
 			<input type="checkbox" id="sentToFinalCutPro" onchange="changeChecked(this)">
 		</th>
 		<th style="width: 100px;"></th>
 		<th style="width: 200px; text-align:left;">
-			<span style="font-weight:normal; font-size:13px;">Column containing new title:</span>
+			<span style="font-weight:normal; font-size:13px;">{{ i18n("columnContainingNewTitle") }}:</span>
 		</th>
 		<th>
 			<select id="newTitleColumn" style="width: 35px;" onchange="changeValue(this)">
@@ -202,8 +205,8 @@
 <table class="editor">
 	<thead>
 		<tr>
-			<th><h4 style="margin: 0;">Original Title (from FCPXML)</h3></th>
-			<th><h4 style="margin: 0;">New Title (from CSV)</h3></th>
+			<th><h4 style="margin: 0;">{{ i18n("originalTitleFromFCPXML") }}</h3></th>
+			<th><h4 style="margin: 0;">{{ i18n("newTitleFromCSV") }}</h3></th>
 		</tr>
 	</thead>
 	<tbody id="editorBody">
@@ -217,13 +220,13 @@
 	<tr>
 		<th style="width: 10px;"></th>
 		<th>
-			<a href="#" class="bottomButton" onclick="pressButton('exportCSV')">Export CSV</a>
+			<a href="#" class="bottomButton" onclick="pressButton('exportCSV')">{{ i18n("exportCSV") }}</a>
 		</th>
 		<th>
-			<a href="#" class="bottomButton" onclick="pressButton('exportNewFCPXML')">Export FCPXML</a>
+			<a href="#" class="bottomButton" onclick="pressButton('exportNewFCPXML')">{{ i18n("exportFCPXML") }}</a>
 		</th>
 		<th>
-			<a href="#" class="bottomButton" onclick="pressButton('batchProcessFolder')">Batch Process Folder</a>
+			<a href="#" class="bottomButton" onclick="pressButton('batchProcessFolder')">{{ i18n("batchProcessFolder") }}</a>
 		</th>
 	</tr>
 </table>
